...
    "Open Settings" to CommandActionType.OPEN_SETTINGS,
    "Scroll Down" to CommandActionType.SCROLL_DOWN,
    "Scroll Up" to CommandActionType.SCROLL_UP,
    "Play Media" to CommandActionType.MEDIA_PLAY,
    "Pause Media" to CommandActionType.MEDIA_PAUSE,
    "Volume Up" to CommandActionType.VOLUME_UP,
    "Volume Down" to CommandActionType.VOLUME_DOWN,
    "Mute" to CommandActionType.VOLUME_MUTE,
    "Take Screenshot" to CommandActionType.SCREENSHOT,
    "Flashlight On" to CommandActionType.FLASHLIGHT_ON,
    "Flashlight Off" to CommandActionType.FLASHLIGHT_OFF,
    "Start Dictation" to CommandActionType.DICTATION_START,
    "Show Commands" to CommandActionType.SHOW_COMMANDS,
...
